--- a/mvc/index.html
+++ b/mvc/index.html
@@ -179,6 +179,7 @@
                 Em seguida, temos mais um método do PDOStatement, o <code>execute</code>, que como o nome indica, executa um declaração preparada.
             </p>
             <p>
+                <b>OBS.: </b>
                 Caso você esteja fazendo uma função de seleção, você deve retornar o resultado do método <code>fetch</code> do <code>PDOStatement</code>. O método <code>fetch</code> retorna uma linha de um conjunto de resultados associado a um objeto <code>PDOStatement</code>. O <code>PDO::FETCH_</code> determina a forma como o fetch vai retornar o resultado, confira <a href="http://php.net/manual/pt_BR/pdostatement.fetch.php" target="_blank">TODAS</a>.
             </p>
         </section>
@@ -188,8 +189,17 @@
                 Bom, como já dito, na linha 16 a gente recebe na variável <code>$connect</code> um objeto PDO que é gerado após ser feita a conexão com o banco. Mas o que é esse tal de PDO?
             </p>
             <p>
-                O PDO é uma classe nativa da linguagem PHP...
+                O PDO (PHP Data Objects) é uma classe nativa da linguagem PHP. Ela define uma interface leve e consistente para acessar bancos de dados em PHP.
             </p>
+            <p>
+                O PDO fornece uma camada de abstração de acesso a dados, o que significa que, independentemente de qual banco de dados você está usando, você usa as mesmas funções para emitir consultas e buscar dados. O PDO não fornece uma abstração de banco de dados; não reescreve SQL ou emula características ausentes.
+            </p>
+            <p>
+                A conexões com o banco serão estabelecidas através da criação de instâncias da classe base PDO. O construtor da PDO aceita parâmetros para especificar a fonte de banco de dados (conhecido como o DSN) e, opcionalmente, para o nome de usuário e senha (se houver). Como segue:
+            </p>
+            <div class="code-block">
+                <code><span>1 </span>$connect = <span style="color: #A33239">new</span> <span style="color: #">PDO</span>(<span style="color: #">'mysql:host=localhost;dbname=test'</span>, $user, $pass);</code>
+            </div>
         </section>
         <section>
             <h1>AINDA INCOMPLETO! ESTÁ EM CONSTRUÇÃO</h1>
