Corrige problemas de compatibilidade com o Google-Chrome

--- a/index.html
+++ b/index.html
@@ -18,34 +18,34 @@
             <div>
                 <ul class="menu">
                     <a target="_blank" href="" class="inactive">
-                        <li><img src="ilp/assets/img/ilp.svg" alt="ILP" style="filter: invert(60%)" /> - Introdução à Lógica de Programação</li>
+                        <li><img src="ilp/assets/img/ilp.svg" alt="ILP" class="invert" /> - Introdução à Lógica de Programação</li>
                     </a>
                     <a target="_blank" href="https://infojrufba.github.io/g/mysql">
                         <li><img src="mysql/assets/img/mysql.svg" alt="MySQL" /> - Modelando bancos de dados em MySQL</li>
                     </a>
                     <a target="_blank" href="https://infojrufba.github.io/g/crud">
-                        <li><img src="crud/assets/img/crud.svg" alt="CRUD" style="filter: invert(60%)" /> - Operações básicas em bancos de dados</li>
+                        <li><img src="crud/assets/img/crud.svg" alt="CRUD" class="invert" /> - Operações básicas em bancos de dados</li>
                     </a>
                     <a target="_blank" href="https://infojrufba.github.io/g/poo">
-                        <li><img src="poo/assets/img/poo.svg" alt="POO" style="filter: invert(60%)" /> - Programação Orientada a Objetos (1º Pilar)</li>
+                        <li><img src="poo/assets/img/poo.svg" alt="POO" class="invert" /> - Programação Orientada a Objetos (1º Pilar)</li>
                     </a>
                     <a target="_blank" href="https://infojrufba.github.io/g/mvc">
                         <li><img src="mvc/assets/img/mvc.svg" alt="MVC" /> - A software architectural pattern</li>
                     </a>
                     <a target="_blank" href="" class="inactive">
-                        <li><img src="js/assets/img/css.svg" alt="JS" style="filter: invert(60%)" /> - JavaScript</li>
+                        <li><img src="js/assets/img/css.svg" alt="JS" class="invert" /> - JavaScript</li>
                     </a>
                     <a target="_blank" href="" class="inactive">
-                        <li><img src="html/assets/img/html.svg" alt="HTML" style="filter: invert(60%)" /> - Hypertext Marckup Language</li>
+                        <li><img src="html/assets/img/html.svg" alt="HTML" class="invert" /> - Hypertext Marckup Language</li>
                     </a>
                     <a target="_blank" href="" class="inactive">
-                        <li><img src="css/assets/img/css.svg" alt="CSS" style="filter: invert(60%)" /> - Cascade StyleSheet</li>
+                        <li><img src="css/assets/img/css.svg" alt="CSS" class="invert" /> - Cascade StyleSheet</li>
                     </a>
                     <a target="_blank" href="" class="inactive">
-                        <li><img src="rsp/assets/img/css.svg" alt="RSP" style="filter: invert(60%)" /> - Responsividade</li>
+                        <li><img src="rsp/assets/img/css.svg" alt="RSP" class="invert" /> - Responsividade</li>
                     </a>
                     <a target="" href="" class="inactive">
-                        <li><img src="poo/assets/img/poo.svg" alt="POO" style="filter: invert(60%)" /> - Programação Orientada a Objetos (2º, 3º e 4º Pilar) - Refatorando seu projeto.</li>
+                        <li><img src="poo/assets/img/poo.svg" alt="POO" class="invert" /> - Programação Orientada a Objetos (2º, 3º e 4º Pilar) - Refatorando seu projeto.</li>
                     </a>
                     <a target="_blank" href="https://infojrufba.github.io/g/sass">
                         <li><img src="sass/assets/img/sass.svg" alt="SASS" /> - CSS com super-poderes!</li>
