Inicia guia de ILP

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
             </p>
             <div>
                 <ul class="menu">
-                    <a target="_blank" href="" class="inactive">
+                    <a target="_blank" href="https://infojrufba.github.io/g/ilp">
                         <li><img src="ilp/assets/img/ilp.svg" alt="ILP" class="invert" /> - Introdução à Lógica de Programação</li>
                     </a>
                     <a target="_blank" href="https://infojrufba.github.io/g/mysql">
