Adiciona informações sobre operador ternário e operadores lógicos

--- a/ilp/index.html
+++ b/ilp/index.html
@@ -7,7 +7,7 @@
         <title>Guias - ILP</title>
     </head>
     <body>
-        <section class="wini center full">
+        <section class="coffee center full">
             <div class="image">
                 <img src="assets/img/ilp.svg" alt="" />
                 <h1>Introdução à Lógica de Programação</h1>
@@ -18,7 +18,7 @@
             <p>Peraê que Bill Gates, Mark Zuckerberg, will.i.am, Chris Bosh, Jack Dorsey, Tony Hsieh, Drew Houston, Gabe Newell, Ruchi Sanghvi, Elena Silenok, Vanessa Hurst, e Hadi Partovi vão te dizer:<p>
             <iframe width="854" height="480" src="https://www.youtube.com/embed/nKIu9yen5nc" frameborder="0" allowfullscreen></iframe>
         </section>
-        <section class="green">
+        <section class="orange">
             <h1>Algoritmos pra que te quero.</h1>
             <p>Algorítmo é o conceito base quando o assunto é programação de computadores.</p>
             <p>Um algoritmo nada mais é do que uma sequência de passos que visam atingir
@@ -212,6 +212,38 @@
             <p>
                 Presta atenção na exclamação. Ela é um símbolo de negação.
             </p>
+            <p>
+                Outro operador relacional é o operador "?:" (ou ternário).O operador ternário é a estrutura abaixo, que funciona como se fosse uma verificação seguida de tomada de decisão.
+            </p>
+            <div class="code-block">
+                <code>
+                    (<span style="color: #2196F3">Minha_condição_é_verdade</span>)? <span style="color: #70A649">Se_for_Execute_isso</span>: <span style="color: #A33239">Se_não_for_Execute_isso</span>;
+                </code>
+            </div>
+            <p>
+                Espia pro exemplo:
+            </p>
+            <div class="code-block">
+                <code>
+                    $a = (<span style="color: #2196F3">1 > 2</span>)? <span style="color: #70A649">1</span>: <span style="color: #A33239">2</span>;  <span style="color: #B0662F">//Aqui $a vai receber o valor 2, porque 1 não é maior que 2.</span>
+                </code>
+                <code>
+                    $b = (<span style="color: #2196F3">1 < 2</span>)? <span style="color: #70A649">1</span>: <span style="color: #A33239">2</span>; <span style="color: #B0662F">//Aqui $b vai receber o valor 1, porque 1 é menor que 2.</span>
+                </code>
+            </div>
+        </section>
+        <section>
+            <h3>E tome-le operador!</h3>
+            <h4>
+                Tem também os Operadores lógicos!
+            </h4>
+            <p>
+                Esses são barril dobrado. Temos a conjunção e a disjunção (Alô Discreta I)!
+            </p>
+            <div class="code-block">
+                <code>$a && $b <span style="color: #B0662F">// $a e $b, tem que ter a e tem que ter b</span></code></code>
+                <code>$a || $b <span style="color: #B0662F">// $a ou $b, pode ter a ou pode ter b</span></code></code>
+            </div>
         </section>
         <section>
             <h1>O GUIA AINDA NÃO ESTÁ PRONTO.</h1>
