Algumas breves correções nos guias de ILP, MySQL, POO e MVC.

--- a/ilp/index.html
+++ b/ilp/index.html
@@ -36,9 +36,9 @@
                     <pre>Δ = 4</pre>
                 </li>
                 <li>
-                    3º Passo: Verificar se o valor de é maior que 0, menor que 0 ou = 0 para definir o próximo passo.
+                    3º Passo: Verificar se o valor de Δ é maior que 0, menor que 0 ou igual a 0 para definir o próximo passo.
                     Se for menor que 0, não precisamos calcular mais nada, pois a equação não terá valor real.
-                    Se for = 0, sabemos que só precisamos calcular x uma vez.
+                    Se for igual a 0, sabemos que só precisamos calcular x uma vez.
                     Se for maior que zero. Calcularemos o valor para x’ e x’’.
                     <p>No caso, Δ > 0.</p>
                 </li>
@@ -72,7 +72,7 @@
                     <li>Identificador: nome dado à variável para possibilitar sua manipulação</li>
                 </ul>
                 <p>
-                    No nosso exemplo da equação de 2º Grau, as nossas variáveis são identificadas como A, B, C, x’ e x’’, tais que 1, -10, 24, 6 e 4 são os seus respectivos valores. Não modificamos o valor das nossas variáveis durante a execução desse algorítimo.
+                    No nosso exemplo da equação de 2º Grau, as nossas variáveis são identificadas como A, B, C, Δ, x’ e x’’, tais que 1, -10, 24, 4, 6 e 4 são os seus respectivos valores. Não modificamos o valor das nossas variáveis durante a execução desse algorítimo.
                 </p>
             </div>
             <div class="image">
@@ -122,7 +122,7 @@
         <section class="wini">
             <h1>Tipos de dados</h1>
             <p>
-                Isso costuma variar um pouquinho de linguagem para linguagem. Mas como aqui o lance mesmo é PHP…
+                Isso costuma variar um pouquinho de linguagem para linguagem. Mas como aqui o lance mesmo é PHP...
             </p>
             <p>PHP dá suporte aos seguintes tipos de dados [1]:</p>
             <p>Quatro tipos escalares</p>
@@ -171,7 +171,7 @@
             </p>
             <div class="code-block">
                 <code>
-                    &lt?php $a = 2*(19 + 1) - 10/2;  <span style="color: #B0662F">//Resulta em 35</span> ?&gt
+                    &lt?php $a = 2*(19 + 1) - 10/2;  <span style="color: #B0662F">//Resulta em $a = 35</span> ?&gt
                 </code>
             </div>
             <p>
@@ -183,13 +183,13 @@
                 <code><span>3 ....</span>$b = 2;</code>
                 <code><span>4 ....</span>$a = 1;</code>
                 <code><span>5</span></code>
-                <code><span>6 ....</span>$a += $b;  <span style="color: #B0662F">// vai resultar em 3, pois vai lançar 1+2</span></code>
-                <code><span>7 ....</span>$a -= $b;  <span style="color: #B0662F">// vai resultar em -1. pois vai lançar 1-2</span></code>
-                <code><span>8 ....</span>$a *= $b;  <span style="color: #B0662F">// vai resultar em 2, pois vai lançar 1*2</span></code>
+                <code><span>6 ....</span>$a += $b;  <span style="color: #B0662F">// vai resultar em $a = 3, pois vai lançar 1+2</span></code>
+                <code><span>7 ....</span>$a -= $b;  <span style="color: #B0662F">// vai resultar em $a = -1. pois vai lançar 1-2</span></code>
+                <code><span>8 ....</span>$a *= $b;  <span style="color: #B0662F">// vai resultar em $a = 2, pois vai lançar 1*2</span></code>
                 <code><span>9 ....</span>$a /= $b;  <span style="color: #B0662F">// vai resultar em?? TESTE AÍ...</span></code>
             </div>
             <p>
-                Ah, e quando utilizamos um símbolo de igual, ele não significa IGUAL, siginifica RECEBE, no caso $a = 1 quer dizer que a variável a recebe o valor 1.
+                Ah, e quando utilizamos um símbolo de igual, ele não significa IGUAL, siginifica RECEBE, no caso $a = 1 quer dizer que a variável "$a" recebe o valor 1.
             </p>
         </section>
         <section>
@@ -254,7 +254,7 @@
                     E aí, a introdução à lógica de programação é isso aí.
                 </h1>
                 <p>
-                    A sequência desse guia é o guia de MySQL. Você já ouviu falar nisso?
+                    A sequência desse guia é o guia de <a href="https://infojrufba.github.io/g/mysql/">MySQL</a>. Você já ouviu falar nisso?
                 </p>
             </div>
             <div class="image">
