--- a/mysql/index.html
+++ b/mysql/index.html
@@ -78,7 +78,7 @@
                     Bom... bancos de dados são formados por tabelas (tables), que por sua vez, são formadas por <b>linhas (rows)</b> e <b>colunas (columns)</b>, igualzinho ao Excel..
                 </p>
                 <p>
-                    Tabelas guardam e exibem dados em um formato estruturado. Uma tabela geralmente está associada a um grupo de informações (usuários, por exemplo) onde cada coluna guarda um tipo de informação (nome, email, telefone) e cada linha representa uma instância daquele grupo (um usuário em específico). A esse grupo de informações damos o nome de <b>ENTIDADE</b>
+                    Tabelas guardam e exibem dados em um formato estruturado. Uma tabela geralmente está associada a um grupo de informações (usuários, por exemplo) onde cada coluna guarda um tipo de informação (nome, email, telefone) e cada linha representa uma instância daquele grupo (um usuário em específico). A esse grupo de informações damos o nome de <b>ENTIDADE</b>.
                 </p>
                 <h4>
                     <b>ENTIDADE? Tipo coisa de religião?</b>
