--- a/poo/index.html
+++ b/poo/index.html
@@ -96,7 +96,7 @@
                 Quero escrever em PHP... E aí?
             </h1>
             <p>
-                Então... Os conceitos fundamentais já foram apresentados, e a sintaxe mais básica, extraida de um aquivo user.php, segue abaixo:
+                Então... Os conceitos fundamentais já foram apresentados, e a sintaxe mais básica, extraída de um aquivo user.php, segue abaixo:
             </p>
             <div class="code-block">
                 <code>&lt?php</code>
