Adiciona guia de ionic

--- a/index.html
+++ b/index.html
@@ -50,6 +50,9 @@
                     <a target="_blank" href="https://infojrufba.github.io/g/sass">
                         <li><img src="sass/assets/img/sass.svg" alt="SASS" /> - CSS com super-poderes!</li>
                     </a>
+                    <a target="_blank" href="https://infojrufba.github.io/g/ionic">
+                        <li><img src="ionic/assets/img/ionic-logo-blue.png" alt="Ionic" /> - framework for building amazing mobile apps. </li>
+                    </a>
                 </ul>
             </div>
         </section>
