--- a/poo/index.html
+++ b/poo/index.html
@@ -2,6 +2,7 @@
 <html>
     <head>
         <meta charset="utf-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1">
         <link rel="stylesheet" href="assets/css/manualTrainee.css">
         <link rel="icon" type="image/png" href="assets/img/infojr-ico.svg">
         <title>Guias - POO</title>
