Corrige nomenclatura do operador >
Refs #2

--- a/ilp/index.html
+++ b/ilp/index.html
@@ -206,7 +206,7 @@
                 <code><span>5 ....</span>$a <> $b <span style="color: #B0662F">//Não iguais</span></code>
                 <code><span>6 ....</span>$a !== $b <span style="color: #B0662F">//Não idênticos</span></code>
                 <code><span>7 ....</span>$a < $b <span style="color: #B0662F">//Menor que</span></code>
-                <code><span>8 ....</span>$a > $b <span style="color: #B0662F">//Menor que</span></code>
+                <code><span>8 ....</span>$a > $b <span style="color: #B0662F">//Maior que</span></code>
                 <code><span>9 ....</span>$a <= $b <span style="color: #B0662F">//Menor ou igual a</span></code>
                 <code><span>10....</span>$a >= $b <span style="color: #B0662F">//Maior ou igual a</span></code>
             </div>
